--- a/app/views/enter-your-details.html
+++ b/app/views/enter-your-details.html
@@ -21,13 +21,13 @@
 
             {% call govukFieldset({
               legend: {
-                text: "Tell us your details",
+                text: "What is your correspondence address?",
                 classes: "govuk-fieldset__legend--l",
                 isPageHeading: true
               }
             }) %}
 
-              {{ govukInput({
+        <!--      {{ govukInput({
                     label: {
                       classes: "govuk-label--m",
                       text: "Full name"       
@@ -36,12 +36,12 @@
                     name: "fullName",
                     autocomplete: "name",
                     spellcheck: false
-                  }) }}
+                  }) }} -->
 
             {% endcall %}
 
 
-           <h2 class="govuk-heading-m govuk-!-margin-bottom-1">Correspondence address</h2>
+         <!--  <h2 class="govuk-heading-m govuk-!-margin-bottom-1">Correspondence address</h2> -->
             <p class="govuk-hint">We’ll use this to contact you about your account. </p>
                           
 
