--- a/app/views/enter-your-details.html
+++ b/app/views/enter-your-details.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Enter your details - Apply for a Companies House online filing presenter account - GOV.UK
+  What is your correspondence address? - Apply for a Companies House online filing presenter account - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
