--- a/app/views/enter-your-details.html
+++ b/app/views/enter-your-details.html
@@ -42,7 +42,7 @@
 
 
          <!--  <h2 class="govuk-heading-m govuk-!-margin-bottom-1">Correspondence address</h2> -->
-            <p class="govuk-hint">We’ll use this to contact you about your account. </p>
+            <p class="govuk-hint">We may use this to contact you about your account. </p>
                           
 
             <div class="govuk-form-group">
