--- a/app/views/index.html
+++ b/app/views/index.html
@@ -42,6 +42,7 @@
 
     <h2 class="govuk-heading-s">Emails:</h2>
       <ul class="govuk-list govuk-list--bullet">
+        <li><a href="/email/email-from-comms" class="govuk-link">Comms email</a></li>
         <li><a href="/email/accepted-email" class="govuk-link">Application accepted</a></li>
         <li><a href="/email/rejected-email" class="govuk-link">Application rejected</a></li>
       </ul>
