--- a/app/views/email/rejected-email.html
+++ b/app/views/email/rejected-email.html
@@ -131,8 +131,8 @@
         <tr>
           <td colspan="2">
             <div style="margin:20px 0 25px; padding:3px 15px 3px; background-color:#f8f8f7; border: 1px solid #b7b9bb;">
-                <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin:15px 0">Your application for an online presenter filing account has been  <span style="font-weight: 700;">rejected</span>.</p>
-                <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin: 15px 0;"> There was a problem with the details you provided on your application. </p>
+                <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin:15px 0">We have not been able to create your online presenter filing account.</p>
+
              </div>
             </td>
             </tr>
