--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,7 +9,7 @@
 
 
     <h1 class="govuk-heading-l">
-      {{ serviceName }}
+     {{ serviceName }}
     </h1>
 
     {{ govukWarningText({
@@ -17,35 +17,13 @@
       iconFallbackText: "Warning"
     }) }}
 
-    <h2 class="govuk-heading-m">Design:</h2>
+    <h2 class="govuk-heading-m">Versions:</h2>
     <ul class="govuk-list govuk-list--bullet">
-      <li><a href="https://app.mural.co/t/companieshouse8589/m/companieshouse8589/1699962904188/3175e02991cb480374fc46cb8f4d16152ae41996?wid=0-1700062229423" class="govuk-link">Service design (in Mural)</a></li>
+      <li><a href="/v2/index" class="govuk-link">V2 (January 2024)</a></li>
+      <li><a href="/v1/index" class="govuk-link">V1 (November 2023)</a></li>
+
     </ul>
 
-    <h2 class="govuk-heading-m">Shortcuts:</h2>
-      <ul class="govuk-list govuk-list--bullet">
-        <li><a href="start" class="govuk-link">Start</a></li>
-        <li><a href="accessibility-statement" class="govuk-link">Accessibility statement</a></li>
-        <li><a href="sign-in" class="govuk-link">Sign in</a></li>
-        <li><a href="sign-out" class="govuk-link">Sign out</a></li>
-        <li><a href="enter-your-details" class="govuk-link">What is your correspondence address?</a></li>
-        <li><a href="check-your-answers" class="govuk-link">Check your answers</a></li>
-       <!-- <li><a href="generate-new-code#" class="govuk-link">Generate new code?</a></li>-->
-        <li><a href="confirmation" class="govuk-link">Application submitted</a></li>
-      </ul>
-
-         <h2 class="govuk-heading-s">Other:</h2>
-      <ul class="govuk-list govuk-list--bullet">
-        <li><a href="filter" class="govuk-link">Filter question</a></li>
-        <li><a href="stop" class="govuk-link">Stop screen</a></li>
-      </ul>
-
-    <h2 class="govuk-heading-s">Emails:</h2>
-      <ul class="govuk-list govuk-list--bullet">
-        <li><a href="/email/email-from-comms" class="govuk-link">Comms email</a></li>
-        <li><a href="/email/accepted-email" class="govuk-link">Application accepted</a></li>
-        <li><a href="/email/rejected-email" class="govuk-link">Application rejected</a></li>
-      </ul>
 
   </div>
 </div>
