--- a/app/views/v2/filter.html
+++ b/app/views/v2/filter.html
@@ -17,7 +17,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/filter" method="post">
+      <form class="form" action="/v2/filter" method="post">
 
     {{ govukRadios({
           name: "filter",
