--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -25,7 +25,7 @@
     <h2 class="govuk-heading-m">Shortcuts:</h2>
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="start" class="govuk-link">Start</a></li>
-        <li><a href="accessibility-statement" class="govuk-link">Accessibility statement</a></li>
+        <li><a href="../accessibility-statement" class="govuk-link">Accessibility statement</a></li>
         <li><a href="sign-in" class="govuk-link">Sign in</a></li>
         <li><a href="sign-out" class="govuk-link">Sign out</a></li>
         <li><a href="enter-your-details" class="govuk-link">What is your correspondence address?</a></li>
@@ -42,9 +42,9 @@
 
     <h2 class="govuk-heading-s">Emails:</h2>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="/email/email-from-comms" class="govuk-link">Comms email</a></li>
-        <li><a href="/email/accepted-email" class="govuk-link">Application accepted</a></li>
-        <li><a href="/email/rejected-email" class="govuk-link">Application rejected</a></li>
+        <li><a href="email/email-from-comms" class="govuk-link">Comms email</a></li>
+        <li><a href="email/accepted-email" class="govuk-link">Application accepted</a></li>
+        <li><a href="email/rejected-email" class="govuk-link">Application rejected</a></li>
       </ul>
 
 
