--- a/app/views/v2/index.html
+++ b/app/views/v2/index.html
@@ -25,7 +25,7 @@
     <h2 class="govuk-heading-m">Shortcuts:</h2>
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="start" class="govuk-link">Start</a></li>
-        <li><a href="accessibility-statement" class="govuk-link">Accessibility statement</a></li>
+        <li><a href="../accessibility-statement" class="govuk-link">Accessibility statement</a></li>
         <li><a href="filter" class="govuk-link">Filter question</a></li>
         <li><a href="stop" class="govuk-link">Stop screen</a></li>
         <li><a href="sign-in" class="govuk-link">Sign in</a></li>
@@ -38,9 +38,9 @@
 
     <h2 class="govuk-heading-s">Emails:</h2>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="/email/email-from-comms" class="govuk-link">Comms email</a></li>
-        <li><a href="/email/accepted-email" class="govuk-link">Application accepted</a></li>
-        <li><a href="/email/rejected-email" class="govuk-link">Application rejected</a></li>
+        <li><a href="email/email-from-comms" class="govuk-link">Comms email</a></li>
+        <li><a href="email/accepted-email" class="govuk-link">Application accepted</a></li>
+        <li><a href="email/rejected-email" class="govuk-link">Application rejected</a></li>
       </ul>
 
 
