--- a/app/views/v1/enter-your-details.html
+++ b/app/views/v1/enter-your-details.html
@@ -17,7 +17,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/check-your-answers" method="post">
+      <form class="form" action="check-your-answers" method="post">
 
             {% call govukFieldset({
               legend: {
