--- a/app/views/v2/confirmation.html
+++ b/app/views/v2/confirmation.html
@@ -42,7 +42,7 @@
         <a href="https://www.smartsurvey.co.uk/s/fileconfstmnt-feedback/">What did you think of this service?</a>
         (takes around 2 minutes to complete)
       </p> -->
-      <p class="govuk-!-font-size-14 govuk-!-margin-top-8"><a href="/email/accepted-email" class="govuk-form-hint">Shortcut: link to accepted email</a><br><a href="/email/rejected-email" class="govuk-form-hint">Shortcut: link to rejected email</a></p>
+      <p class="govuk-!-font-size-14 govuk-!-margin-top-8"><a href="email/accepted-email" class="govuk-form-hint">Shortcut: link to accepted email</a><br><a href="email/rejected-email" class="govuk-form-hint">Shortcut: link to rejected email</a></p>
 
           </div>
         </div>
