--- a/app/views/v2/stop.html
+++ b/app/views/v2/stop.html
@@ -21,7 +21,7 @@
 
      <h1 class="govuk-heading-l">You cannot use this service</h1>
 
-     <p class="govuk-body">You will need to <a href="https://apply-presenter-prototype-8bf1efc0699b.herokuapp.com/start" class="govuk-link">complete an application form</a> to:</p>
+     <p class="govuk-body">You will need to <a href="https://www.gov.uk/government/publications/apply-for-a-companies-house-online-filing-presenter-account" class="govuk-link">complete an application form</a> to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>apply for a presenter credit account to file documents with a fee</li>
