--- a/app/views/v2/email/rejected-email.html
+++ b/app/views/v2/email/rejected-email.html
@@ -139,8 +139,8 @@
           <tr>
             <td colspan="2">
                 <h2 style="font-family: Helvetica, Arial, sans-serif; font-size: 24px; line-height: 1.315789474; margin: 15px 0;">What to do next</h2>
-                <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin: 15px 0;">You can submit a new application if the address you gave was incorrect:<br>
-                <a href="" style="color: #1d70b8;">URL of service here</a></p> 
+                <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin: 15px 0;">You can submit a new application if the information you gave was incorrect:<br>
+                <a href="../start">https://www.gov.uk/apply-for-presenter-account</a></p> 
                 
                 <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin: 15px 0;">Contact Companies House if you have any questions about your application:<br>
                 <a href="https://www.gov.uk/government/organisations/companies-house#org-contacts" style="color: #1d70b8;">https://www.gov.uk/government/organisations/companies-house#org-contacts</a></p>
