--- a/app/views/v2/filter.html
+++ b/app/views/v2/filter.html
@@ -33,7 +33,7 @@
               value: "no-fee",
               text: "Presenter account",
               hint: {
-                html: "You can only file documents <strong>without a fee</strong>."
+                html: "You can only file company accounts and other documents <strong>without a fee</strong>."
               }
             },
             {
