--- a/app/views/v2/start.html
+++ b/app/views/v2/start.html
@@ -25,10 +25,10 @@
       </h1>
 
      <!-- <p class="govuk-body-l">**Content here**</p> -->
-      <p class="govuk-body">Use this service to apply for a presenter account to file online with Companies House using third-party software. You can only use a presenter account to file documents without a fee.</p>
+      <p class="govuk-body">Use this service to apply for a presenter account to file company documents with Companies House using software. You can only use this to file company accounts and other documents without a fee.</p>
       
 
-      <details class="govuk-details" data-module="govuk-details">
+  <!-- Details component with lost presenter account details  <details class="govuk-details" data-module="govuk-details">
   <summary class="govuk-details__summary">
     <span class="govuk-details__summary-text">
       If you’ve lost your presenter account details
@@ -45,15 +45,23 @@
     
 
 
- <!--OPT 1 -->
+ <!--OPT for V2 using info panel -->
+
+
+<div class="ch-info-panel">
+
  <p class="govuk-body"><strong>You cannot use this service to:</strong></p>
 
-      <ul class="govuk-list govuk-list--bullet">
+       <ul class="govuk-list govuk-list--bullet">
         <li>apply for a presenter credit account to file documents with a fee</li>
         <li>register as a lender to file electronic charge documents</li>
       </ul>
 
-<p>For these, you will need to <a href="https://www.gov.uk/government/publications/apply-for-a-companies-house-online-filing-presenter-account" class="govuk-link">complete an application form</a>.</p> 
+<p><a href="https://www.gov.uk/government/publications/apply-for-a-companies-house-online-filing-presenter-account" class="govuk-link">Complete an application form</a> if you need to apply for these.</p> 
+
+      </div>
+ 
+
 
 <!--opt2 
 <p>You cannot use this service if you need to file documents with a fee, or file electronic charge documents. For these, you’ll need to <a href="https://apply-presenter-prototype-8bf1efc0699b.herokuapp.com/start" class="govuk-link">complete an application form</a> to apply for a presenter account, or register as a lender.</p> -->
