--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -20,3 +20,13 @@ ul#navigation {
       a {margin-left: 0.9em;}
     }
   }
+
+
+    //Style for the start page - info panel
+
+  .ch-info-panel {
+    background-color: #F3F2F1;
+    text-align: left;
+    margin: 1em 0;
+    padding: 2em;
+  }
