--- a/app/views/v2/filter.html
+++ b/app/views/v2/filter.html
@@ -33,14 +33,14 @@
               value: "no-fee",
               text: "Presenter account",
               hint: {
-                html: "You can only file company accounts and other documents <strong>without a fee</strong>."
+                html: "You can only file company accounts and documents <strong>without a fee</strong>."
               }
             },
             {
               value: "fee",
               text: "Presenter credit account",
           hint: {
-                html: "You can file documents <strong>with a fee</strong>."
+                html: "You can file company accounts and documents <strong>with a fee</strong>."
               }
             },
             {
