Minor spacing update

--- a/app/views/v2/start.html
+++ b/app/views/v2/start.html
@@ -48,7 +48,7 @@
  <!--OPT for V2 using info panel -->
 
 
-<div class="ch-info-panel">
+<div class="ch-info-panel govuk-!-padding-bottom-3">
 
  <p class="govuk-body"><strong>You cannot use this service to:</strong></p>
 
