--- a/app/views/v2/start.html
+++ b/app/views/v2/start.html
@@ -25,7 +25,7 @@
       </h1>
 
      <!-- <p class="govuk-body-l">**Content here**</p> -->
-      <p class="govuk-body">Use this service to apply for a presenter account to file company documents with Companies House using software. You can only use this to file company accounts and other documents without a fee.</p>
+      <p class="govuk-body">Use this service to apply for a presenter account to file company documents with Companies House using software. You can use this to file company accounts and other documents without a fee.</p>
       
 
   <!-- Details component with lost presenter account details  <details class="govuk-details" data-module="govuk-details">
@@ -47,6 +47,7 @@
 
  <!--OPT for V2 using info panel -->
 
+<!--
 
 <div class="ch-info-panel govuk-!-padding-bottom-3">
 
@@ -60,7 +61,7 @@
 <p><a href="https://www.gov.uk/government/publications/apply-for-a-companies-house-online-filing-presenter-account" class="govuk-link">Complete an application form</a> if you need to apply for these.</p> 
 
       </div>
- 
+ -->
 
 
 <!--opt2 
