--- a/app/views/v2/filter.html
+++ b/app/views/v2/filter.html
@@ -58,7 +58,7 @@
       <li>overseas companies </li>
       <li>community interest companies (CIC)</li>
     </ul>
-    <p>You should check the documents you need to file to find out if they have a filing fee. It will say if there is a fee on the document itself. </p>
+    <p>You should check the documents you need to file. If there is a filing fee, it will say on the document itself. </p>
   </div>
 </details>
 
