--- a/app/views/v2/stop.html
+++ b/app/views/v2/stop.html
@@ -24,7 +24,7 @@
      <p class="govuk-body">You will need to <a href="https://www.gov.uk/government/publications/apply-for-a-companies-house-online-filing-presenter-account" class="govuk-link">complete an application form</a> to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>apply for a presenter credit account to file documents with a fee</li>
+        <li>apply for a presenter credit account to file accounts and documents with a fee</li>
         <li>register as a lender to file electronic charge documents</li>
       </ul>
 
