--- a/app/views/v2/confirmation.html
+++ b/app/views/v2/confirmation.html
@@ -34,7 +34,9 @@
             <li>presenter code </li>
           </ul>
 
-        <p>You must keep your ID and code secure. You will need them for online filings. </p>
+        <p class="govuk-body">This can take up to an hour. If you have not received an email after an hour, check your junk folder. </p>
+
+        <p>You must keep your presenter ID and code secure. You will need them to file using software. </p>
 
 <!--           <h2 class="govuk-heading-m">If your application is rejected</h2>
       <p>We'll email you to explain what to do next.</p> -->
