--- a/app/views/v2/filter.html
+++ b/app/views/v2/filter.html
@@ -48,7 +48,7 @@
 <details class="govuk-details">
   <summary class="govuk-details__summary">
     <span class="govuk-details__summary-text">
-      Accounts and documents with a fee
+      Accounts and documents that have a fee to file
     </span>
   </summary>
   <div class="govuk-details__text">
