--- a/app/views/v2/stop.html
+++ b/app/views/v2/stop.html
@@ -21,12 +21,26 @@
 
      <h1 class="govuk-heading-l">You cannot use this service</h1>
 
-     <p class="govuk-body">You will need to <a href="https://www.gov.uk/government/publications/apply-for-a-companies-house-online-filing-presenter-account" class="govuk-link">complete an application form</a> to:</p>
+     <p class="govuk-body">If you need to file (any of the following): </p>
+  
+        <ul class="govuk-list govuk-list--bullet">
+        <li>accounts and documents with a fee</li>
+        <li>electronic charge documents</li>
+      </ul> 
+
+     <p>You will need to <a href="https://www.gov.uk/government/publications/apply-for-a-companies-house-online-filing-presenter-account" class="govuk-link">complete an application form</a>.</p>
+
+    <!-- <p class="govuk-body">If you need to file:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>apply for a presenter credit account to file accounts and documents with a fee</li>
-        <li>register as a lender to file electronic charge documents</li>
-      </ul>
+        <li>accounts and documents with a fee, you will need to <a href="https://assets.publishing.service.gov.uk/media/5b1fdcf540f0b634b73dbf05/ofscaa__real_.pdf" class="govuk-link">apply for a presenter credit account</a></li>
+        <li>electronic charge documents, you will need to <a href="https://assets.publishing.service.gov.uk/media/5b1fdd1ce5274a18fa9d39b3/lenderacc__real_.pdf" class="govuk-link">register as a lender</a></li>
+      </ul> -->
+      
+      
+
+
+
 
       </div>
     </div>
