--- a/app/views/v2/filter.html
+++ b/app/views/v2/filter.html
@@ -36,7 +36,7 @@
             },
             {
               value: "fee",
-              html: "<p>Accounts and documents <strong>with or without a fee</strong></p>"
+              html: "<p>Accounts and documents <strong>with and without a fee</strong></p>"
             },
             {
               value: "charges",
