--- a/app/views/v2/enter-your-details.html
+++ b/app/views/v2/enter-your-details.html
@@ -52,9 +52,9 @@
 
               
               
-            <!--  <div id="address-property-hint" class="govuk-hint">
-                For example, &#39;Saron House&#39;, &#39;116&#39; or &#39;Unit 37a&#39;.
-              </div> -->
+            <div id="address-property-hint" class="govuk-hint">
+                For example, &#39;The Mill&#39;, &#39;116&#39; or &#39;Flat 37a&#39;.
+              </div> 
 
             <input class="govuk-input" id="address-property" name="addressProperty" type="text" aria-describedby="address-property-hint" autocomplete="address-property">
 
