--- a/app/views/v2/filter.html
+++ b/app/views/v2/filter.html
@@ -31,12 +31,12 @@
           items: [
             {
               value: "no-fee",
-              html:  "<p>Accounts and documents <strong>without a fee</strong></p>"
+              html:  "<p>Accounts and documents <strong>without a filing fee</strong></p>"
               
             },
             {
               value: "fee",
-              html: "<p>Accounts and documents <strong>with and without a fee</strong></p>"
+              html: "<p>Accounts and documents <strong>with and without a filing fee</strong></p>"
             },
             {
               value: "charges",
@@ -48,7 +48,7 @@
 <details class="govuk-details">
   <summary class="govuk-details__summary">
     <span class="govuk-details__summary-text">
-      Accounts and documents that have a fee to file
+      Accounts and documents that have a filing fee
     </span>
   </summary>
   <div class="govuk-details__text">
