--- a/app/views/v2/stop.html
+++ b/app/views/v2/stop.html
@@ -24,7 +24,7 @@
      <p class="govuk-body">If you need to file (any of the following): </p>
   
         <ul class="govuk-list govuk-list--bullet">
-        <li>accounts and documents with a fee</li>
+        <li>accounts and documents with a filing fee</li>
         <li>electronic charge documents</li>
       </ul> 
 
