--- a/app/views/v2/start.html
+++ b/app/views/v2/start.html
@@ -25,8 +25,12 @@
       </h1>
 
      <!-- <p class="govuk-body-l">**Content here**</p> -->
-      <p class="govuk-body">Use this service to apply for a presenter account to file company documents with Companies House using software. You can use this to file company accounts and documents that do not have a filing fee.</p>
+      <p class="govuk-body">Use this service to apply for a presenter account to file company accounts and documents with Companies House using software. </p>
       
+
+<div class="govuk-inset-text">
+  You can only use this to file company accounts and documents that <strong>do not have a filing fee</strong>.
+</div>
 
   <!-- Details component with lost presenter account details  <details class="govuk-details" data-module="govuk-details">
   <summary class="govuk-details__summary">
