--- a/app/views/v2/confirmation.html
+++ b/app/views/v2/confirmation.html
@@ -34,7 +34,7 @@
             <li>presenter code </li>
           </ul>
 
-        <p class="govuk-body">This can take up to an hour. If you have not received an email after an hour, check your junk folder. </p>
+        <p class="govuk-body">If you have not received an email within an hour, check your spam or junk folder. If it still has not arrived, you should <a href="start">submit another application</a>.  </p>
 
         <p>You must keep your presenter ID and code secure. You will need them to file using software. </p>
 
