--- a/app/views/v2/stop.html
+++ b/app/views/v2/stop.html
@@ -19,7 +19,7 @@
 
       <form class="form" action="/filter" method="post">
 
-     <h1 class="govuk-heading-l">You cannot use this service</h1>
+     <h1 class="govuk-heading-l">You need to complete an application form</h1>
 
      <p class="govuk-body">If you need to file (any of the following): </p>
   
