--- a/app/views/v2/filter.html
+++ b/app/views/v2/filter.html
@@ -60,7 +60,7 @@
 
 
 <div class="govuk-inset-text">
-<p>If you need to file electronic charge (mortgage) documents, you will need to <a href="">apply to register as a lender</a> instead. </p>
+<p>If you need to file electronic charge (mortgage) documents, you will need to <a href="https://www.gov.uk/government/publications/apply-for-a-companies-house-online-filing-presenter-account">apply to register as a lender</a> instead. </p>
 </div>
 
 
