--- a/app/views/v2/start.html
+++ b/app/views/v2/start.html
@@ -29,7 +29,7 @@
       
 
 <div class="govuk-inset-text">
-  You can only use this to file company accounts and documents that <strong>do not have a filing fee</strong>.
+  You can only use a presenter account to file company accounts and documents that <strong>do not have a filing fee</strong>.
 </div>
 
   <!-- Details component with lost presenter account details  <details class="govuk-details" data-module="govuk-details">
