--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,6 +19,7 @@
 
     <h2 class="govuk-heading-m">Versions:</h2>
     <ul class="govuk-list govuk-list--bullet">
+      <li><a href="/v3/index" class="govuk-link">V3 (February 2024)</a></li>
       <li><a href="/v2/index" class="govuk-link">V2 (January 2024)</a></li>
       <li><a href="/v1/index" class="govuk-link">V1 (November 2023)</a></li>
 
