--- a/app/views/v3/start.html
+++ b/app/views/v3/start.html
@@ -28,22 +28,12 @@
       <p class="govuk-body">Use this service to apply for a presenter account to file online with Companies House using third-party software. You can only use a presenter account to file documents without a fee.</p>
       
 
-      <details class="govuk-details" data-module="govuk-details">
-  <summary class="govuk-details__summary">
-    <span class="govuk-details__summary-text">
-      If you’ve lost your presenter account details
-    </span>
-  </summary>
-  <div class="govuk-details__text">
-  <p>You'll need to use this service to apply for a new account.</p>
 
-  <p><a href="https://www.gov.uk/contact-companies-house" class="govuk-link">Contact us</a> if you have any questions about your account.</p>
-
-  </div>
-</details>
     
     
-
+<div class="govuk-inset-text">
+  You can only use a presenter account to file company accounts and documents that <strong>do not have a filing fee</strong>.
+</div>
 
 
 
@@ -57,6 +47,20 @@
         }) }}
 
 
+
+      <details class="govuk-details" data-module="govuk-details">
+  <summary class="govuk-details__summary">
+    <span class="govuk-details__summary-text">
+      If you’ve lost your presenter account details
+    </span>
+  </summary>
+  <div class="govuk-details__text">
+  <p>Use this service to submit an application. We will send you new account details.</p>
+
+  <p><a href="https://www.gov.uk/contact-companies-house" class="govuk-link">Contact us</a> if you have any questions about your account.</p>
+
+  </div>
+</details>
    
 
       <p class="govuk-body"><a href="https://mcmw.abilitynet.org.uk/" class="govuk-link">Read advice from AbilityNet on how to adapt your device to meet your needs</a>. For example, changing the background colour or text size.</p>
