--- a/app/views/v3/start.html
+++ b/app/views/v3/start.html
@@ -51,7 +51,7 @@
       <details class="govuk-details" data-module="govuk-details">
   <summary class="govuk-details__summary">
     <span class="govuk-details__summary-text">
-      If you’ve lost your presenter account details
+      What to do if you’ve lost your presenter account details
     </span>
   </summary>
   <div class="govuk-details__text">
