--- a/app/views/v3/start.html
+++ b/app/views/v3/start.html
@@ -42,7 +42,7 @@
 
       {{ govukButton({
           text: "Start now",
-          href: "filter",
+          href: "sign-in",
           isStartButton: true
         }) }}
 
