--- a/app/views/accessibility-statement.html
+++ b/app/views/accessibility-statement.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Accessibility statement
+  Accessibility statement -  {{ serviceName }} - GOV.UK
 {% endblock %}
 
 {% block content %}
@@ -46,7 +46,7 @@
       <h2 class="govuk-heading-m">How we tested this service</h2>
       <p>We regularly carry out internal tests for compliance with the Web Content Accessibility Guidelines V2.1 level A and level AA using a variety of manual and automated testing tools.</p>
       <p>This service was audited on <strong class="govuk-tag govuk-tag--red">To be added
-        </strong>. The audit was carried out internallyThe complete end to end user journey was audited.</p>
+        </strong>. The audit was carried out internally. The complete end to end user journey was audited.</p>
 
       <h2 class="govuk-heading-m">What we’re doing to improve accessibility</h2>
 
