--- a/app/views/v3/start.html
+++ b/app/views/v3/start.html
@@ -25,7 +25,7 @@
       </h1>
 
      <!-- <p class="govuk-body-l">**Content here**</p> -->
-      <p class="govuk-body">Use this service to apply for a presenter account to file online with Companies House using third-party software.</p>
+      <p class="govuk-body">Use this service to apply for a presenter account to file online with Companies House using software.</p>
       
 
 
