--- a/app/views/v3/index.html
+++ b/app/views/v3/index.html
@@ -30,8 +30,11 @@
         <li><a href="stop" class="govuk-link">Stop screen</a></li>
         <li><a href="sign-in" class="govuk-link">Sign in</a></li>
         <li><a href="sign-out" class="govuk-link">Sign out</a></li>
-        <li><a href="enter-your-details" class="govuk-link">What is your correspondence address?</a></li>
-        <li><a href="check-your-answers" class="govuk-link">Check your answers</a></li>
+      <li><a href="have-number" class="govuk-link">Do you have a company number?</a></li>
+       <li><a href="company-details" class="govuk-link">No company number</a></li>
+        <li><a href="company-details" class="govuk-link">Company number</a></li>
+       <li><a href="company-details" class="govuk-link">Company confirm</a></li>
+        <li><a href="check-your-answers" class="govuk-link">Contact details</a></li>
        <!-- <li><a href="generate-new-code#" class="govuk-link">Generate new code?</a></li>-->
         <li><a href="confirmation" class="govuk-link">Application submitted</a></li>
       </ul>
