--- a/app/views/v3/sign-in.html
+++ b/app/views/v3/sign-in.html
@@ -16,7 +16,7 @@
 
 {% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-half">
+    <div class="govuk-grid-column-two-thirds">
 
 
       <h1 class="govuk-heading-xl">Sign in to Companies House</h1>
@@ -45,7 +45,7 @@
 
         {{ govukButton({
           text: "Sign in",
-          href: "enter-your-details"
+          href: "have-number"
         }) }}
       <p class="govuk-body">
         <a href="" class="govuk-link">Register</a>
