--- a/app/views/v3/index.html
+++ b/app/views/v3/index.html
@@ -24,19 +24,20 @@
 
     <h2 class="govuk-heading-m">Shortcuts:</h2>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="start" class="govuk-link">Start</a></li>
-        <li><a href="../accessibility-statement" class="govuk-link">Accessibility statement</a></li>
-        <li><s><a href="filter" class="govuk-link">Filter question</a></s></li>
-        <li><a href="stop" class="govuk-link">Stop screen</a></li>
-        <li><a href="sign-in" class="govuk-link">Sign in</a></li>
-        <li><a href="sign-out" class="govuk-link">Sign out</a></li>
-      <li><a href="have-number" class="govuk-link">Do you have a company number?</a></li>
-       <li><a href="company-details" class="govuk-link">No company number</a></li>
-        <li><a href="company-details" class="govuk-link">Company number</a></li>
-       <li><a href="company-details" class="govuk-link">Company confirm</a></li>
-        <li><a href="check-your-answers" class="govuk-link">Contact details</a></li>
-       <!-- <li><a href="generate-new-code#" class="govuk-link">Generate new code?</a></li>-->
-        <li><a href="confirmation" class="govuk-link">Application submitted</a></li>
+          <li><a href="start" class="govuk-link">Start</a></li>
+          <li><a href="../accessibility-statement" class="govuk-link">Accessibility statement</a></li>
+          <li><s><a href="filter" class="govuk-link">Filter question</a></s></li>
+          <li><a href="stop" class="govuk-link">Stop screen</a></li>
+          <li><a href="sign-in" class="govuk-link">Sign in</a></li>
+          <li><a href="sign-out" class="govuk-link">Sign out</a></li>
+          <li><a href="have-number" class="govuk-link">Do you have a company number?</a></li>
+          <li><a href="company-name" class="govuk-link">No company number (enter company name)</a></li>
+          <li><a href="company-number" class="govuk-link">Company number</a></li>
+          <li><a href="correct-company" class="govuk-link">Company number (confirm company)</a></li>
+          <li><a href="contact-details" class="govuk-link">Contact details</a></li>
+          <li><a href="check-your-answers" class="govuk-link">Check your answers</a></li>
+          <!-- <li><a href="generate-new-code#" class="govuk-link">Generate new code?</a></li>-->
+          <li><a href="confirmation" class="govuk-link">Application submitted</a></li>
       </ul>
 
     <h2 class="govuk-heading-s">Emails:</h2>
