--- a/app/views/v3/check-your-answers.html
+++ b/app/views/v3/check-your-answers.html
@@ -28,7 +28,7 @@
               text: "Address"
             },
             value: {
-              html: "72 Guild Street<br>London<br>SE23 6FH"
+              html: "72 Guild Street<br>London<br>SE23 6FH<br>United Kingdom"
             },
             actions: {
               items: [
