--- a/app/views/v3/start.html
+++ b/app/views/v3/start.html
@@ -37,7 +37,18 @@
 
 
 
-    <p>You'll need to sign in or create a Companies House account to use this service. It takes around 5 minutes to apply. </p>
+
+    <p>You'll need to:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>sign in or create an account</li>
+      <li>give a name and correspondence address for the account</li>
+      </ul>
+      
+    <p>You'll also need to give the company number for the company you need to file for. Or, if you are 
+an agent who files for more than one company, you'll need to give the name or company number of the business you work for. </p>
+
+
+    <p>It takes around 5 minutes to apply. </p>
 
 
       {{ govukButton({
