--- a/app/views/v3/index.html
+++ b/app/views/v3/index.html
@@ -30,6 +30,7 @@
           <li><a href="stop" class="govuk-link">Stop screen</a></li>
           <li><a href="sign-in" class="govuk-link">Sign in</a></li>
           <li><a href="sign-out" class="govuk-link">Sign out</a></li>
+         <li><a href="type-filings" class="govuk-link">What filings do you need to do?</a></li>
           <li><a href="have-number" class="govuk-link">Do you have a company number?</a></li>
           <li><a href="company-name" class="govuk-link">No company number (enter company name)</a></li>
           <li><a href="company-number" class="govuk-link">Company number</a></li>
