--- a/app/views/v3/sign-in.html
+++ b/app/views/v3/sign-in.html
@@ -45,7 +45,7 @@
 
         {{ govukButton({
           text: "Sign in",
-          href: "have-number"
+          href: "type-filings"
         }) }}
       <p class="govuk-body">
         <a href="" class="govuk-link">Register</a>
